make groupBy not null